[package]
name = "f411-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
embedded-sdmmc = "0.3"

[dependencies.stm32f4xx-hal]
version = "0.13.1"
features = ["stm32f411", "rtic"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"